--- a/terraform/backends/backend.conf
+++ b/terraform/backends/backend.conf
@@ -1,4 +1,4 @@
-resource_group_name="auth-check-state-rg"
-storage_account_name="auth-check-state-sa"
+resource_group_name="auth-note-state-rg"
+storage_account_name="authnotestatesa"
 container_name="terraform"
-key="auth-check.tfstate"
+key="auth-note.tfstate"
