added queue name parameter

--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -180,7 +180,7 @@ jobs:
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.KEY }}
+        password: ${{ secrets.PASSWORD }}
         port: ${{ secrets.PORT }}
         script: |
           docker build --tag ${{ env.FILENAME }} ~/${{ env.DEST_DIR }}/${{ env.FILENAME }}/.
