added default for build_container

--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -23,6 +23,8 @@ on:
         options:
           - rebuild
           - nobuild
+        required: true
+        default: 'nobuild'
 
 permissions:
   id-token: write
